manifests/sirup-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sirup
  name: sirup
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sirup
  sessionAffinity: None
  type: ClusterIP
